tests/ui/expect-named-struct.stderr
error: Expected named struct
 --> tests/ui/expect-named-struct.rs:6:8
  |
6 | struct Bar(u32, u32, i8);
  |        ^^^

error: Expected named struct
 --> tests/ui/expect-named-struct.rs:9:6
  |
9 | enum Baz {
  |      ^^^

error: Expected named struct
  --> tests/ui/expect-named-struct.rs:14:7
   |
14 | union Bax {
   |       ^^^

error: expected one of: `struct`, `enum`, `union`
  --> tests/ui/expect-named-struct.rs:20:5
   |
20 | pub fn foo() {}
   |     ^^
